force-app/main/default/objects/DS_us_license__c/DS_us_license__c.object-meta.xml
<CustomObject>
    <label>DS us license</label>
    <nameField>
        <displayFormat>DS US License-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS us licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>