force-app/main/default/objects/DS_us_license__c/fields/bi_address_line_1__c.field-meta.xml
<CustomField>
    <fullName>bi_address_line_1__c</fullName>
    <label>BI Address line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>