force-app/main/default/objects/DS_us_license__c/fields/bi_address_line_2__c.field-meta.xml
<CustomField>
    <fullName>bi_address_line_2__c</fullName>
    <label>BI Address line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>