force-app/main/default/objects/DS_us_license__c/fields/bi_class__c.field-meta.xml
<CustomField>
    <fullName>bi_class__c</fullName>
    <label>BI Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>