force-app/main/default/objects/DS_us_license__c/fields/bi_country__c.field-meta.xml
<CustomField>
    <fullName>bi_country__c</fullName>
    <label>BI Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>