force-app/main/default/objects/DS_us_license__c/fields/bi_dd__c.field-meta.xml
<CustomField>
    <fullName>bi_dd__c</fullName>
    <label>BI DD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>