force-app/main/default/objects/DS_us_license__c/fields/bi_dln__c.field-meta.xml
<CustomField>
    <fullName>bi_dln__c</fullName>
    <label>BI DLN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>