force-app/main/default/objects/DS_us_license__c/fields/bi_dob__c.field-meta.xml
<CustomField>
    <fullName>bi_dob__c</fullName>
    <label>BI DOB</label>
    <type>Date</type>
</CustomField>