force-app/main/default/objects/DS_us_license__c/fields/bi_driver_id__c.field-meta.xml
<CustomField>
    <fullName>bi_driver_id__c</fullName>
    <label>BI Driver ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>