force-app/main/default/objects/DS_us_license__c/fields/bi_end__c.field-meta.xml
<CustomField>
    <fullName>bi_end__c</fullName>
    <label>BI END</label>
    <length>100</length>
    <type>Text</type>
</CustomField>