force-app/main/default/objects/DS_us_license__c/fields/bi_entitlement_categ__c.field-meta.xml
<CustomField>
    <fullName>bi_entitlement_categ__c</fullName>
    <label>BI Entitlement Categ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>