force-app/main/default/objects/DS_us_license__c/fields/bi_eyes__c.field-meta.xml
<CustomField>
    <fullName>bi_eyes__c</fullName>
    <label>BI Eyes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>