force-app/main/default/objects/DS_us_license__c/fields/bi_hairs__c.field-meta.xml
<CustomField>
    <fullName>bi_hairs__c</fullName>
    <label>BI Hairs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>