force-app/main/default/objects/DS_us_license__c/fields/bi_height__c.field-meta.xml
<CustomField>
    <fullName>bi_height__c</fullName>
    <label>BI Height</label>
    <length>100</length>
    <type>Text</type>
</CustomField>