force-app/main/default/objects/DS_us_license__c/fields/bi_issue_date__c.field-meta.xml
<CustomField>
    <fullName>bi_issue_date__c</fullName>
    <label>BI Issue date</label>
    <type>Date</type>
</CustomField>