force-app/main/default/objects/DS_us_license__c/fields/bi_issuing_authority__c.field-meta.xml
<CustomField>
    <fullName>bi_issuing_authority__c</fullName>
    <label>BI Issuing authority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>