force-app/main/default/objects/DS_us_license__c/fields/bi_last_name__c.field-meta.xml
<CustomField>
    <fullName>bi_last_name__c</fullName>
    <label>BI Last name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>