force-app/main/default/objects/DS_us_license__c/fields/bi_place_of_birth__c.field-meta.xml
<CustomField>
    <fullName>bi_place_of_birth__c</fullName>
    <label>BI Place of birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>