force-app/main/default/objects/DS_us_license__c/fields/bi_rest__c.field-meta.xml
<CustomField>
    <fullName>bi_rest__c</fullName>
    <label>BI REST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>