force-app/main/default/objects/DS_us_license__c/fields/bi_sex__c.field-meta.xml
<CustomField>
    <fullName>bi_sex__c</fullName>
    <label>BI Sex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>