force-app/main/default/objects/DS_us_license__c/fields/bi_state__c.field-meta.xml
<CustomField>
    <fullName>bi_state__c</fullName>
    <label>BI State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>