force-app/main/default/objects/DS_us_license__c/fields/bi_weight__c.field-meta.xml
<CustomField>
    <fullName>bi_weight__c</fullName>
    <label>BI Weight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>