force-app/main/default/objects/DS_us_license__c/fields/Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Doc_Id__c</fullName>
    <label>Doc Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>