force-app/main/default/objects/DS_us_license__c/fields/doc_status__c.field-meta.xml
<CustomField>
    <fullName>doc_status__c</fullName>
    <label>Doc Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>