force-app/main/default/objects/DS_us_license__c/fields/file_name__c.field-meta.xml
<CustomField>
    <fullName>file_name__c</fullName>
    <label>File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>