force-app/main/default/objects/DS_us_license__c/fields/review_url__c.field-meta.xml
<CustomField>
    <fullName>review_url__c</fullName>
    <label>Review Url</label>
    <type>Url</type>
</CustomField>