force-app/main/default/objects/DS_us_license__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Doc_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>